[package]
name = "grouping_by"
version = "0.1.5"
authors = ["David Garcia <davgarmor2@alum.us.es>"]
license = "MIT"
description = "A simple library which allows the user to group an iterator by various ways."
repository = "https://github.com/Davichet-e/grouping-by"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html