[package]
name = "grouping_by"
version = "0.2.2"
authors = ["David Garcia <davgarmor2@alum.us.es>"]
license = "MIT"
description = "A simple library which allows the user to group an iterator by various ways."
keywords = ["iterators", "traits", "grouping-by"]
repository = "https://github.com/Davichet-e/grouping-by"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html